# flatpack2ctl

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  update_firmware-49F0.bat  update_firmware-BD2C-secondary.bat  update_firmware-ECE0.bat
doc/: flatpack2_protocol.txt
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.h  fp2charger.c  fp2charger.h  idf_component.yml  index.html
